# data_generator

./: .env.example  README.md  docker-compose.yaml  init_project.sh
generator/: Dockerfile  generator.py  pyproject.toml
generator/database/: db.py
generator/database/models/: weather.py
